--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -26,7 +26,7 @@
     <string name="airplane_error_title" msgid="2683839635115739939">"Mode pesawat"</string>
     <string name="airplane_error_msg" msgid="8698965595254137230">"Anda tidak dapat menggunakan Bluetooth dalam mode Pesawat."</string>
     <string name="bt_enable_title" msgid="8657832550503456572"></string>
-    <string name="bt_enable_line1" msgid="7203551583048149">"Kepada menggunakan Layanan Bluetooth, Anda harus menghidupkan Bluetooth terlebih dulu."</string>
+    <string name="bt_enable_line1" msgid="7203551583048149">"Untuk menggunakan Layanan Bluetooth, Anda harus mengaktifkan Bluetooth terlebih dulu."</string>
     <string name="bt_enable_line2" msgid="4341936569415937994">"Hidupkan Bluetooth sekarang?"</string>
     <string name="bt_enable_cancel" msgid="1988832367505151727">"Batal"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"Hidupkan"</string>
