--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -23,8 +23,8 @@
     <string name="bt_share_picker_label" msgid="6268100924487046932">"Bluetooth"</string>
     <string name="unknown_device" msgid="9221903979877041009">"Dispositivo desconocido"</string>
     <string name="unknownNumber" msgid="4994750948072751566">"Desconocido"</string>
-    <string name="airplane_error_title" msgid="2683839635115739939">"Modo avión"</string>
-    <string name="airplane_error_msg" msgid="8698965595254137230">"No puedes utilizar el Bluetooth en el modo avión."</string>
+    <string name="airplane_error_title" msgid="2683839635115739939">"Modo Avión"</string>
+    <string name="airplane_error_msg" msgid="8698965595254137230">"No puedes utilizar el Bluetooth en el modo Avión."</string>
     <string name="bt_enable_title" msgid="8657832550503456572"></string>
     <string name="bt_enable_line1" msgid="7203551583048149">"Para utilizar los servicios de Bluetooth, primero debes activar la función Bluetooth."</string>
     <string name="bt_enable_line2" msgid="4341936569415937994">"¿Quieres activar la función Bluetooth ahora?"</string>
