--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -20,7 +20,7 @@
     <string name="permdesc_bluetoothShareManager" msgid="8930572979123190223">"Lejon aplikacionin të ketë qasje në menaxherin \"Shpërndarje përmes bluetooth-it\" (BluetoothShare) dhe ta përdorë për transferim skedarësh."</string>
     <string name="permlab_bluetoothAcceptlist" msgid="2647575807648622053">"Autorizimi në listën e pranimit të pajisjes me Bluetooth."</string>
     <string name="permdesc_bluetoothAcceptlist" msgid="2406423665674766442">"Lejon aplikacionin të vërë përkohësisht në listën e miratimeve një pajisje me Bluetooth, duke i lejuar asaj t\'i dërgojë skedarë kësaj pajisjeje pa konfirmimin e përdoruesit."</string>
-    <string name="bt_share_picker_label" msgid="6268100924487046932">"Bluetooth"</string>
+    <string name="bt_share_picker_label" msgid="6268100924487046932">"Bluetooth-i"</string>
     <string name="unknown_device" msgid="9221903979877041009">"Pajisje e panjohur"</string>
     <string name="unknownNumber" msgid="4994750948072751566">"I panjohur"</string>
     <string name="airplane_error_title" msgid="2683839635115739939">"Modaliteti \"në aeroplan\""</string>
