--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -38,13 +38,13 @@
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"Terjadi waktu tunggu saat menerima file masuk dari \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"File masuk"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> siap mengirim file: <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Berbagi Bluetooth: Menerima <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_received" msgid="3324588019186687985">"Berbagi Bluetooth: Telah menerima <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_received_fail" msgid="3619350997285714746">"Berbagi Bluetooth: File <xliff:g id="FILE">%1$s</xliff:g> tidak diterima"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Berbagi Bluetooth: Mengirim <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Berbagi Bluetooth: Telah mengirim <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"Berbagi via Bluetooth: Sedang menerima <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received" msgid="3324588019186687985">"Berbagi via Bluetooth: Telah menerima <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received_fail" msgid="3619350997285714746">"Berbagi via Bluetooth: File <xliff:g id="FILE">%1$s</xliff:g> gagal diterima"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Berbagi via Bluetooth: Sedang mengirim <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Berbagi via Bluetooth: Telah mengirim <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% selesai"</string>
-    <string name="notification_sent_fail" msgid="6696082233774569445">"Berbagi Bluetooth: File <xliff:g id="FILE">%1$s</xliff:g> tidak terkirim"</string>
+    <string name="notification_sent_fail" msgid="6696082233774569445">"Berbagi via Bluetooth: File <xliff:g id="FILE">%1$s</xliff:g> gagal dikirim"</string>
     <string name="download_title" msgid="3353228219772092586">"Transfer file"</string>
     <string name="download_line1" msgid="4926604799202134144">"Dari: \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="download_line2" msgid="5876973543019417712">"File: <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -100,15 +100,15 @@
     <string name="status_protocol_error" msgid="3245444473429269539">"Permintaan tidak dapat ditangani dengan semestinya."</string>
     <string name="status_unknown_error" msgid="8156660554237824912">"Kesalahan tidak dikenal."</string>
     <string name="btopp_live_folder" msgid="7967791481444474554">"Bluetooth diterima"</string>
-    <string name="opp_notification_group" msgid="3486303082135789982">"Berbagi Bluetooth"</string>
+    <string name="opp_notification_group" msgid="3486303082135789982">"Berbagi via Bluetooth"</string>
     <string name="download_success" msgid="7036160438766730871">"<xliff:g id="FILE_SIZE">%1$s</xliff:g> Telah selesai diterima."</string>
     <string name="upload_success" msgid="4014469387779648949">"<xliff:g id="FILE_SIZE">%1$s</xliff:g> Telah selesai dikirim."</string>
     <string name="inbound_history_title" msgid="6940914942271327563">"Transfer masuk"</string>
     <string name="outbound_history_title" msgid="4279418703178140526">"Transfer keluar"</string>
     <string name="no_transfers" msgid="3482965619151865672">"Histori transfer kosong."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Semua item akan dihapus dari daftar."</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"Berbagi bluetooth: Telah mengirimkan file"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Berbagi Bluetooth: File yang diterima"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"Berbagi via Bluetooth: Telah mengirim file"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Berbagi via Bluetooth: Telah menerima file"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> gagal.</item>
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_0">%1$d</xliff:g> gagal.</item>
