--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -38,7 +38,7 @@
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"\"<xliff:g id="SENDER">%1$s</xliff:g>\" igorlearen sarrerako fitxategia onartzeko denbora-muga gainditu da"</string>
     <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Sarrerako fitxategia"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> igorlea prest dago fitxategi hau bidaltzeko: <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth bidez partekatzea: <xliff:g id="FILE">%1$s</xliff:g> fitxategia jasotzen"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth bidez partekatzea: <xliff:g id="FILE">%1$s</xliff:g> jasotzen"</string>
     <string name="notification_received" msgid="3324588019186687985">"Bluetooth bidez partekatzea: <xliff:g id="FILE">%1$s</xliff:g> fitxategia jaso da"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth bidez partekatzea: ez da jaso <xliff:g id="FILE">%1$s</xliff:g> fitxategia"</string>
     <string name="notification_sending" msgid="3035748958534983833">"Bluetooth bidez partekatzea: <xliff:g id="FILE">%1$s</xliff:g> fitxategia bidaltzen"</string>
