--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -38,13 +38,13 @@
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"Za vrijeme primanja datoteke koju šalje \"<xliff:g id="SENDER">%1$s</xliff:g>\" došlo je do privremenog prekida"</string>
     <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Dolazna datoteka"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> sada može poslati datoteku: <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Dijeljenje Bluetoothom: Primanje datoteke <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_received" msgid="3324588019186687985">"Dijeljenje Bluetoothom: Primljena datoteka <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_received_fail" msgid="3619350997285714746">"Dijeljenje Bluetoothom: Datoteka <xliff:g id="FILE">%1$s</xliff:g> nije primljena"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Dijeljenje Bluetoothom: Slanje datoteke <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Dijeljenje Bluetoothom: Datoteka <xliff:g id="FILE">%1$s</xliff:g> poslana"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"Dijeljenje Bluetoothom: primanje datoteke <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received" msgid="3324588019186687985">"Dijeljenje Bluetoothom: primljena datoteka <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received_fail" msgid="3619350997285714746">"Dijeljenje Bluetoothom: datoteka <xliff:g id="FILE">%1$s</xliff:g> nije primljena"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Dijeljenje Bluetoothom: slanje datoteke <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Dijeljenje Bluetoothom: datoteka <xliff:g id="FILE">%1$s</xliff:g> poslana"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% dovršeno"</string>
-    <string name="notification_sent_fail" msgid="6696082233774569445">"Dijeljenje Bluetoothom: Datoteka <xliff:g id="FILE">%1$s</xliff:g> nije poslana"</string>
+    <string name="notification_sent_fail" msgid="6696082233774569445">"Dijeljenje Bluetoothom: datoteka <xliff:g id="FILE">%1$s</xliff:g> nije poslana"</string>
     <string name="download_title" msgid="3353228219772092586">"Prijenos datoteke"</string>
     <string name="download_line1" msgid="4926604799202134144">"Šalje: \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="download_line2" msgid="5876973543019417712">"Datoteka: <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -107,8 +107,8 @@
     <string name="outbound_history_title" msgid="4279418703178140526">"Odlazni prijenosi"</string>
     <string name="no_transfers" msgid="3482965619151865672">"Povijest prijenosa je prazna."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"S popisa će biti izbrisane sve stavke."</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth dijeljenje: poslane datoteke"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth dijeljenje: primljene datoteke"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"Dijeljenje Bluetoothom: poslane datoteke"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Dijeljenje Bluetoothom: primljene datoteke"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> bez uspjeha.</item>
       <item quantity="few"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> bez uspjeha.</item>
