--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -31,20 +31,20 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"Չեղարկել"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"Միացնել"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"Ֆայլերի փոխանցում"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Ընդունե՞լ մուտքային ֆայլը:"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Ընդունե՞լ մուտքային ֆայլը"</string>
     <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"Մերժել"</string>
     <string name="incoming_file_confirm_ok" msgid="281462442932231475">"Ընդունել"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"Եղավ"</string>
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"«<xliff:g id="SENDER">%1$s</xliff:g>»-ից մուտքային ֆայլի ընդունման ժամանակը սպառվեց"</string>
     <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Մուտքային ֆայլ"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"«<xliff:g id="SENDER">%1$s</xliff:g>» սարքը պատրաստ է ուղարկել այս ֆայլը՝ <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth համօգտագործում՝ <xliff:g id="FILE">%1$s</xliff:g>-ը ստացվում է"</string>
-    <string name="notification_received" msgid="3324588019186687985">"Bluetooth համօգտագործում՝ ստացվեց <xliff:g id="FILE">%1$s</xliff:g>-ը"</string>
-    <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth համօգտագործում՝ <xliff:g id="FILE">%1$s</xliff:g> ֆայլը չի ստացվել"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth համօգտագործում՝ ուղարկվում է <xliff:g id="FILE">%1$s</xliff:g>-ը"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth համօգտագործում՝ <xliff:g id="FILE">%1$s</xliff:g>-ն ուղարկված է"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth-ով փոխանցում․ <xliff:g id="FILE">%1$s</xliff:g> ֆայլն ընդունվում է"</string>
+    <string name="notification_received" msgid="3324588019186687985">"Bluetooth-ով փոխանցում․ ընդունվեց <xliff:g id="FILE">%1$s</xliff:g> ֆայլը"</string>
+    <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth-ով փոխանցում․ <xliff:g id="FILE">%1$s</xliff:g> ֆայլը չի ստացվել"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth-ով փոխանցում․ ուղարկվում է <xliff:g id="FILE">%1$s</xliff:g> ֆայլը"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth-ով փոխանցում․ <xliff:g id="FILE">%1$s</xliff:g> ֆայլն ուղարկվեց"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% ավարտուն"</string>
-    <string name="notification_sent_fail" msgid="6696082233774569445">"Bluetooth համօգտագործում՝ <xliff:g id="FILE">%1$s</xliff:g> ֆայլը չի ուղարկվել"</string>
+    <string name="notification_sent_fail" msgid="6696082233774569445">"Bluetooth-ով փոխանցում․ <xliff:g id="FILE">%1$s</xliff:g> ֆայլը չի ուղարկվել"</string>
     <string name="download_title" msgid="3353228219772092586">"Ֆայլերի փոխանցում"</string>
     <string name="download_line1" msgid="4926604799202134144">"Ումից՝ «<xliff:g id="SENDER">%1$s</xliff:g>»"</string>
     <string name="download_line2" msgid="5876973543019417712">"Ֆայլ՝ <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -55,7 +55,7 @@
     <string name="download_ok" msgid="5000360731674466039">"Թաքցնել"</string>
     <string name="incoming_line1" msgid="2127419875681087545">"Ումից"</string>
     <string name="incoming_line2" msgid="3348994249285315873">"Ֆայլի անունը"</string>
-    <string name="incoming_line3" msgid="7954237069667474024">"Չափը"</string>
+    <string name="incoming_line3" msgid="7954237069667474024">"Չափսը"</string>
     <string name="download_fail_line1" msgid="3846450148862894552">"Ֆայլը չհաջողվեց ստանալ"</string>
     <string name="download_fail_line2" msgid="8950394574689971071">"Ֆայլ՝ <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="download_fail_line3" msgid="3451040656154861722">"Պատճառը՝ <xliff:g id="REASON">%1$s</xliff:g>"</string>
@@ -100,15 +100,15 @@
     <string name="status_protocol_error" msgid="3245444473429269539">"Հարցումը հնարավոր չէ ճշգրտորեն մշակել:"</string>
     <string name="status_unknown_error" msgid="8156660554237824912">"Անհայտ սխալ:"</string>
     <string name="btopp_live_folder" msgid="7967791481444474554">"Bluetooth-ով ստացված"</string>
-    <string name="opp_notification_group" msgid="3486303082135789982">"Bluetooth համօգտագործում"</string>
+    <string name="opp_notification_group" msgid="3486303082135789982">"Bluetooth-ով փոխանցում"</string>
     <string name="download_success" msgid="7036160438766730871">"<xliff:g id="FILE_SIZE">%1$s</xliff:g> ստացումն ավարտված է:"</string>
     <string name="upload_success" msgid="4014469387779648949">"<xliff:g id="FILE_SIZE">%1$s</xliff:g> ուղարկումն ավարտված է:"</string>
     <string name="inbound_history_title" msgid="6940914942271327563">"Մուտքային փոխանցումներ"</string>
     <string name="outbound_history_title" msgid="4279418703178140526">"Ելքային փոխանցումներ"</string>
     <string name="no_transfers" msgid="3482965619151865672">"Փոխանցումների պատմությունը դատարկ է:"</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Ցուցակի բոլոր տվյալները կջնջվեն:"</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth համօգտագործում՝ ֆայլերն ուղարկված են"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth համօգտագործում՝ ֆայլերը ստացված են"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth-ով փոխանցում․ ֆայլերն ուղարկված են"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth-ով փոխանցում․ ֆայլերը ստացված են"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> չհաջողված:</item>
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> չհաջողված:</item>
