--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -41,8 +41,8 @@
     <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлын қабылдауда"</string>
     <string name="notification_received" msgid="3324588019186687985">"Bluetooth бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлы қабылданды"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлы қабылданбады"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлын жіберуде"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлы жіберілді"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth арқылы бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлы жіберілуде"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth арқылы бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлы жіберілді"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% аяқталды"</string>
     <string name="notification_sent_fail" msgid="6696082233774569445">"Bluetooth бөлісу: <xliff:g id="FILE">%1$s</xliff:g> файлы жіберілмеді."</string>
     <string name="download_title" msgid="3353228219772092586">"Файл аудару"</string>
@@ -108,7 +108,7 @@
     <string name="no_transfers" msgid="3482965619151865672">"Тасымал туралы дерек жоқ."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Тізімнен барлық элементтер алынады."</string>
     <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth бөлісу: Жіберілген файлдар"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth бөлісу: Қабылданған файлдар"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth арқылы бөлісу: қабылданған файлдар"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> сәтсіз.</item>
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_0">%1$d</xliff:g> сәтсіз.</item>
