--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -31,18 +31,18 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"បោះ​បង់​"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"បើក"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"ការ​ផ្ទេរ​ឯកសារ"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ទទួល​ឯកសារ​ចូល?"</string>
-    <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"បោះបង់"</string>
-    <string name="incoming_file_confirm_ok" msgid="281462442932231475">"ទទួល"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ទទួលយក​ឯកសារ​ចូលឬ?"</string>
+    <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"បដិសេធ"</string>
+    <string name="incoming_file_confirm_ok" msgid="281462442932231475">"ទទួលយក"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"យល់​ព្រម​"</string>
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"អស់​ពេល​ទទួល​​ឯកសារ​ចូល​ពី \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"ឯកសារចូល"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> អាចផ្ញើឯកសារ​បានហើយ៖ <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ ទទួល <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"ចែក​រំលែកតាម​ប៊្លូ​ធូ​ស៖ កំពុងទទួល <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_received" msgid="3324588019186687985">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ បាន​ទទួល​ <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ មិន​បាន​ទទួល​ឯកសារ <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ ផ្ញើ <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ បាន​ផ្ញើ <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"ចែក​រំលែកតាម​ប៊្លូ​ធូ​ស៖ កំពុងបញ្ជូន <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"ចែក​រំលែកតាម​ប៊្លូ​ធូ​ស៖ បាន​បញ្ជូន <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"​បញ្ចប់ 100​%"</string>
     <string name="notification_sent_fail" msgid="6696082233774569445">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ មិន​បាន​ផ្ញើ​ឯកសារ <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="download_title" msgid="3353228219772092586">"ការ​ផ្ទេរ​ឯកសារ"</string>
@@ -107,8 +107,8 @@
     <string name="outbound_history_title" msgid="4279418703178140526">"ការ​ផ្ទេរ​ចេញ"</string>
     <string name="no_transfers" msgid="3482965619151865672">"មិន​មាន​ប្រវត្តិ​​ផ្ទេរ​។"</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"នឹង​សម្អាត​ធាតុ​ទាំងអស់​ពី​បញ្ជី។"</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ បាន​ផ្ញើ​ឯកសារ"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"ការ​ចែក​រំលែក​ប៊្លូ​ធូ​ស៖ បាន​ទទួល​​​ឯកសារ"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"ចែក​រំលែកតាម​ប៊្លូ​ធូ​ស៖ បាន​បញ្ជូនឯកសារ"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"ចែក​រំលែក​តាមប៊្លូ​ធូ​ស៖ បាន​ទទួល​​​ឯកសារ"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other">មិនបានជោគជ័យ <xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g>។</item>
       <item quantity="one">មិនបានជោគជ័យ <xliff:g id="UNSUCCESSFUL_NUMBER_0">%1$d</xliff:g>។</item>
