--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -31,20 +31,20 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"Айнуу"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"Жандыруу"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"Файл өткөрүү"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Келүүчү файл кабыл алынсынбы?"</string>
-    <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"Баш тартуу"</string>
-    <string name="incoming_file_confirm_ok" msgid="281462442932231475">"Кабыл алуу"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Файлды кабыл аласызбы?"</string>
+    <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"Жок"</string>
+    <string name="incoming_file_confirm_ok" msgid="281462442932231475">"Ооба"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"OK"</string>
-    <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"\"<xliff:g id="SENDER">%1$s</xliff:g>\" жөнөткөн файлды алуу мөөнөтү өтүп кетти."</string>
-    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Кирүүчү файл"</string>
+    <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"\"<xliff:g id="SENDER">%1$s</xliff:g>\" жөнөткөн файлды алуу процесси узакка созулуп кетти"</string>
+    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Файл келди"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> түзмөгү <xliff:g id="FILE">%2$s</xliff:g> файлын жөнөтүүгө даяр"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth бөлүшүү: <xliff:g id="FILE">%1$s</xliff:g> алынууда"</string>
-    <string name="notification_received" msgid="3324588019186687985">"Bluetooth бөлүшүү: <xliff:g id="FILE">%1$s</xliff:g> алынды"</string>
-    <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth бөлүшүү: <xliff:g id="FILE">%1$s</xliff:g> алынган жок"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth бөлүшүү: <xliff:g id="FILE">%1$s</xliff:g> жөнөтүлүүдө"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth бөлүшүү: <xliff:g id="FILE">%1$s</xliff:g> жөнөтүлдү"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth аркылуу алынууда: <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received" msgid="3324588019186687985">"Bluetooth аркылуу алынды: <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received_fail" msgid="3619350997285714746">"Файл алынган жок: <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth аркылуу жөнөтүлүүдө: <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth аркылуу жөнөтүлдү: <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% бүттү"</string>
-    <string name="notification_sent_fail" msgid="6696082233774569445">"Bluetooth бөлүшүү: <xliff:g id="FILE">%1$s</xliff:g> жөнөтүлгөн жок"</string>
+    <string name="notification_sent_fail" msgid="6696082233774569445">"Файл жөнөтүлгөн жок: <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="download_title" msgid="3353228219772092586">"Файл өткөрүү"</string>
     <string name="download_line1" msgid="4926604799202134144">"Жөнөтүүчү: \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="download_line2" msgid="5876973543019417712">"Файл: <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -107,8 +107,8 @@
     <string name="outbound_history_title" msgid="4279418703178140526">"Чыгуучу өткөрүүлөр"</string>
     <string name="no_transfers" msgid="3482965619151865672">"Эч нерсе алына элек"</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Тизмек толугу менен тазаланат."</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth бөлүшүү: Файлдар жөнөтүлдү"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth бөлүшүү: Алынган файлдар"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth аркылуу жөнөтүлдү"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth аркылуу алынды"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> ийгиликсиз болду.</item>
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_0">%1$d</xliff:g> ийгиликсиз болду.</item>
@@ -124,7 +124,7 @@
     <string name="bluetooth_a2dp_sink_queue_name" msgid="6864149958708669766">"Эмне ойноп жатат?"</string>
     <string name="bluetooth_map_settings_save" msgid="7635491847388074606">"Сактоо"</string>
     <string name="bluetooth_map_settings_cancel" msgid="9205350798049865699">"Жокко чыгаруу"</string>
-    <string name="bluetooth_map_settings_intro" msgid="6482369468223987562">"Bluetooth аркылуу бөлүшө турган каттоо эсептерин тандаңыз. Туташкан сайын аккаунттарына кирүү мүмкүнчүлүгүн ырастап турушуңуз керек."</string>
+    <string name="bluetooth_map_settings_intro" msgid="6482369468223987562">"Bluetooth аркылуу бөлүшө турган аккаунттарды тандаңыз. Туташкан сайын аккаунттарга кирүүгө уруксат берип турушуңуз керек."</string>
     <string name="bluetooth_map_settings_count" msgid="4557473074937024833">"Калган көзөнөктөр:"</string>
     <string name="bluetooth_map_settings_app_icon" msgid="7105805610929114707">"Колдонмонун сүрөтчөсү"</string>
     <string name="bluetooth_map_settings_title" msgid="7420332483392851321">"Bluetooth билдирүү бөлүшүү жөндөөлөрү"</string>
