--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -31,7 +31,7 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"ຍົກເລີກ"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"ເປີດ"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"ການໂອນໄຟລ໌"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ຮັບເອົາ​ໄຟລ໌​ທີ່​ເຂົາ​ມາ​ບໍ?"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ຮັບເອົາໄຟລ໌ທີ່ເຂົ້າມາບໍ?"</string>
     <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"ປະຕິເສດ"</string>
     <string name="incoming_file_confirm_ok" msgid="281462442932231475">"ຮັບເອົາ"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"ຕົກລົງ"</string>
@@ -107,8 +107,8 @@
     <string name="outbound_history_title" msgid="4279418703178140526">"ການໂອນອອກ"</string>
     <string name="no_transfers" msgid="3482965619151865672">"ປະຫວັດການໂອນຫວ່າງເປົ່າ."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"ລາຍການທັງໝົດຈະຖືກລຶບອອກຈາກລາຍການດັ່ງກ່າວ."</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"ແບ່ງປັນໃນ Bluetooth: ໄຟລ໌ສົ່ງແລ້ວ"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"ແບ່ງປັນໃນ Bluetooth: ໄຟລ໌ໄດ້ຮັບແລ້ວ"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"ແບ່ງປັນໃນ Bluetooth: ສົ່ງໄຟລ໌ແລ້ວ"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"ແບ່ງປັນໃນ Bluetooth: ໄດ້ຮັບໄຟລ໌ແລ້ວ"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> ບໍ່​ສຳ​ເລັດ.</item>
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_0">%1$d</xliff:g> ບໍ່​ສຳ​ເລັດ.</item>
