--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -108,7 +108,7 @@
     <string name="no_transfers" msgid="3482965619151865672">"കൈമാറൽ ചരിത്രം ശൂന്യമാണ്."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"ലിസ്റ്റിൽ നിന്നും എല്ലാ ഇനങ്ങളും മായ്‌ക്കും."</string>
     <string name="outbound_noti_title" msgid="8051906709452260849">"ബ്ലൂടൂത്ത് പങ്കിടൽ: അയച്ച ഫയലുകൾ"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"ബ്ലൂടൂത്ത് പങ്കിടൽ: ലഭിച്ച ഫയലുകൾ"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth പങ്കിടൽ: ലഭിച്ച ഫയലുകൾ"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> പരാജയം.</item>
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_0">%1$d</xliff:g> പരാജയം.</item>
