--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -31,7 +31,7 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"မလုပ်တော့"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"ဖွင့်မည်"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"ဖိုင်လွှဲပြောင်းခြင်း"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ဝင်လာသည့် ဖိုင်ကို လက်ခံမလား?"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"အဝင်ဖိုင်ကို လက်ခံမလား။"</string>
     <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"လက်မခံပါ"</string>
     <string name="incoming_file_confirm_ok" msgid="281462442932231475">"လက်ခံရန်"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"OK"</string>
