--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -41,10 +41,10 @@
     <string name="notification_receiving" msgid="4674648179652543984">"Delen via bluetooth: <xliff:g id="FILE">%1$s</xliff:g> ontvangen"</string>
     <string name="notification_received" msgid="3324588019186687985">"Delen via bluetooth: <xliff:g id="FILE">%1$s</xliff:g> ontvangen"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"Delen via bluetooth: bestand <xliff:g id="FILE">%1$s</xliff:g> niet ontvangen"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Delen via bluetooth: <xliff:g id="FILE">%1$s</xliff:g> verzenden"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Delen via bluetooth: <xliff:g id="FILE">%1$s</xliff:g> verzonden"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Delen via bluetooth: <xliff:g id="FILE">%1$s</xliff:g> sturen"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Delen via bluetooth: <xliff:g id="FILE">%1$s</xliff:g> verstuurd"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% voltooid"</string>
-    <string name="notification_sent_fail" msgid="6696082233774569445">"Delen via bluetooth: bestand <xliff:g id="FILE">%1$s</xliff:g> niet verzonden"</string>
+    <string name="notification_sent_fail" msgid="6696082233774569445">"Delen via bluetooth: bestand <xliff:g id="FILE">%1$s</xliff:g> niet verstuurd"</string>
     <string name="download_title" msgid="3353228219772092586">"Bestandsoverdracht"</string>
     <string name="download_line1" msgid="4926604799202134144">"Van: \'<xliff:g id="SENDER">%1$s</xliff:g>\'"</string>
     <string name="download_line2" msgid="5876973543019417712">"Bestand: <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -107,7 +107,7 @@
     <string name="outbound_history_title" msgid="4279418703178140526">"Uitgaande overdrachten"</string>
     <string name="no_transfers" msgid="3482965619151865672">"Overdrachtsgeschiedenis is leeg."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Alle items op de lijst worden gewist."</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"Delen via bluetooth: verzonden bestanden"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"Delen via bluetooth: verstuurde bestanden"</string>
     <string name="inbound_noti_title" msgid="4143352641953027595">"Delen via bluetooth: ontvangen bestanden"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> mislukt.</item>
