--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -31,14 +31,14 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"ਰੱਦ ਕਰੋ"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"ਚਾਲੂ ਕਰੋ"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"ਫਾਈਲ ਟ੍ਰਾਂਸਫਰ"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ਕੀ ਇਨਕਮਿੰਗ ਫਾਈਲ ਸਵੀਕਾਰ ਕਰਨੀ ਹੈ?"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"ਕੀ ਇਨਕਮਿੰਗ ਫ਼ਾਈਲ ਸਵੀਕਾਰ ਕਰਨੀ ਹੈ?"</string>
     <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"ਅਸਵੀਕਾਰ ਕਰੋ"</string>
     <string name="incoming_file_confirm_ok" msgid="281462442932231475">"ਸਵੀਕਾਰ ਕਰੋ"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"ਠੀਕ"</string>
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"\"<xliff:g id="SENDER">%1$s</xliff:g>\" ਦੀ ਇੱਕ ਇਨਕਮਿੰਗ ਫਾਈਲ ਸਵੀਕਾਰ ਕਰਨ ਵੇਲੇ ਇੱਕ ਟਾਈਮਆਊਟ ਹੋਇਆ ਸੀ।"</string>
-    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"ਇਨਕਮਿੰਗ ਫਾਈਲ"</string>
+    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"ਇਨਕਮਿੰਗ ਫ਼ਾਈਲ"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> ਫ਼ਾਈਲ ਭੇਜਣ ਲਈ ਤਿਆਰ ਹੈ: <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth ਸ਼ੇਅਰ: <xliff:g id="FILE">%1$s</xliff:g> ਪ੍ਰਾਪਤ ਕਰ ਰਿਹਾ ਹੈ"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"ਬਲੂਟੁੱਥ ਸਾਂਝਾਕਰਨ: <xliff:g id="FILE">%1$s</xliff:g> ਨੂੰ ਪ੍ਰਾਪਤ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"</string>
     <string name="notification_received" msgid="3324588019186687985">"Bluetooth ਸ਼ੇਅਰ: <xliff:g id="FILE">%1$s</xliff:g> ਪ੍ਰਾਪਤ ਕੀਤੀ"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth ਸ਼ੇਅਰ: ਫਾਈਲ <xliff:g id="FILE">%1$s</xliff:g> ਪ੍ਰਾਪਤ ਨਹੀਂ ਕੀਤੀ"</string>
     <string name="notification_sending" msgid="3035748958534983833">"Bluetooth ਸ਼ੇਅਰ: <xliff:g id="FILE">%1$s</xliff:g> ਭੇਜ ਰਿਹਾ ਹੈ"</string>
@@ -46,15 +46,15 @@
     <string name="notification_sent_complete" msgid="302943281067557969">"100% ਪੂਰਾ"</string>
     <string name="notification_sent_fail" msgid="6696082233774569445">"Bluetooth ਸ਼ੇਅਰ: ਫਾਈਲ <xliff:g id="FILE">%1$s</xliff:g> ਨਹੀਂ ਭੇਜੀ ਗਈ"</string>
     <string name="download_title" msgid="3353228219772092586">"ਫਾਈਲ ਟ੍ਰਾਂਸਫਰ"</string>
-    <string name="download_line1" msgid="4926604799202134144">"ਤੋਂ: \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
+    <string name="download_line1" msgid="4926604799202134144">"ਇਨ੍ਹਾਂ ਵੱਲੋਂ: \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="download_line2" msgid="5876973543019417712">"ਫਾਈਲ: <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="download_line3" msgid="4384821622908676061">"ਫਾਈਲ ਆਕਾਰ: <xliff:g id="SIZE">%1$s</xliff:g>"</string>
     <string name="download_line4" msgid="8535996869722666525"></string>
     <string name="download_line5" msgid="3069560415845295386">"ਫਾਈਲ ਪ੍ਰਾਪਤ ਕਰ ਰਿਹਾ ਹੈ…"</string>
     <string name="download_cancel" msgid="9177305996747500768">"ਰੋਕੋ"</string>
     <string name="download_ok" msgid="5000360731674466039">"ਲੁਕਾਓ"</string>
-    <string name="incoming_line1" msgid="2127419875681087545">"ਤੋਂ"</string>
-    <string name="incoming_line2" msgid="3348994249285315873">"ਫਾਈਲ ਨਾਮ"</string>
+    <string name="incoming_line1" msgid="2127419875681087545">"ਇਨ੍ਹਾਂ ਵੱਲੋਂ"</string>
+    <string name="incoming_line2" msgid="3348994249285315873">"ਫ਼ਾਈਲ ਦਾ ਨਾਮ"</string>
     <string name="incoming_line3" msgid="7954237069667474024">"ਆਕਾਰ"</string>
     <string name="download_fail_line1" msgid="3846450148862894552">"ਫਾਈਲ ਪ੍ਰਾਪਤ ਨਹੀਂ ਕੀਤੀ"</string>
     <string name="download_fail_line2" msgid="8950394574689971071">"ਫਾਈਲ: <xliff:g id="FILE">%1$s</xliff:g>"</string>
