--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -31,20 +31,20 @@
     <string name="bt_enable_cancel" msgid="1988832367505151727">"Cancelar"</string>
     <string name="bt_enable_ok" msgid="3432462749994538265">"Ativar"</string>
     <string name="incoming_file_confirm_title" msgid="8139874248612182627">"Transferência de arquivo"</string>
-    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Aceitar o arquivo recebido?"</string>
+    <string name="incoming_file_confirm_content" msgid="2752605552743148036">"Aceitar o arquivo?"</string>
     <string name="incoming_file_confirm_cancel" msgid="2973321832477704805">"Recusar"</string>
     <string name="incoming_file_confirm_ok" msgid="281462442932231475">"Aceitar"</string>
     <string name="incoming_file_confirm_timeout_ok" msgid="1414676773249857278">"OK"</string>
     <string name="incoming_file_confirm_timeout_content" msgid="172779756093975981">"Tempo limite excedido ao receber um arquivo de \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
-    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Arquivo recebido"</string>
+    <string name="incoming_file_confirm_Notification_title" msgid="5573329005298936903">"Recebendo arquivo"</string>
     <string name="incoming_file_confirm_Notification_content" msgid="6237487486781004992">"<xliff:g id="SENDER">%1$s</xliff:g> já pode enviar um arquivo: <xliff:g id="FILE">%2$s</xliff:g>"</string>
-    <string name="notification_receiving" msgid="4674648179652543984">"Compart. Bluetooth: recebendo <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_received" msgid="3324588019186687985">"Compart. Bluetooth: <xliff:g id="FILE">%1$s</xliff:g> recebido"</string>
-    <string name="notification_received_fail" msgid="3619350997285714746">"Compart. Bluetooth: o arquivo <xliff:g id="FILE">%1$s</xliff:g> não foi recebido"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Compart. Bluetooth: enviando <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_sent" msgid="9218710861333027778">"Compart. Bluetooth: <xliff:g id="FILE">%1$s</xliff:g> enviado"</string>
+    <string name="notification_receiving" msgid="4674648179652543984">"Bluetooth: recebendo <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_received" msgid="3324588019186687985">"Bluetooth: <xliff:g id="FILE">%1$s</xliff:g> recebido"</string>
+    <string name="notification_received_fail" msgid="3619350997285714746">"Bluetooth: arquivo <xliff:g id="FILE">%1$s</xliff:g> não recebido"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Bluetooth: enviando <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sent" msgid="9218710861333027778">"Bluetooth: <xliff:g id="FILE">%1$s</xliff:g> enviado"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% concluído"</string>
-    <string name="notification_sent_fail" msgid="6696082233774569445">"Compart. Bluetooth: o arquivo <xliff:g id="FILE">%1$s</xliff:g> não foi enviado"</string>
+    <string name="notification_sent_fail" msgid="6696082233774569445">"Bluetooth: arquivo <xliff:g id="FILE">%1$s</xliff:g> não enviado"</string>
     <string name="download_title" msgid="3353228219772092586">"Transferência de arquivo"</string>
     <string name="download_line1" msgid="4926604799202134144">"De: \"<xliff:g id="SENDER">%1$s</xliff:g>\""</string>
     <string name="download_line2" msgid="5876973543019417712">"Arquivo: <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -100,15 +100,15 @@
     <string name="status_protocol_error" msgid="3245444473429269539">"Não é possível tratar a solicitação corretamente."</string>
     <string name="status_unknown_error" msgid="8156660554237824912">"Erro desconhecido."</string>
     <string name="btopp_live_folder" msgid="7967791481444474554">"Recebido por Bluetooth"</string>
-    <string name="opp_notification_group" msgid="3486303082135789982">"Compartilhamento Bluetooth"</string>
+    <string name="opp_notification_group" msgid="3486303082135789982">"Envio por Bluetooth"</string>
     <string name="download_success" msgid="7036160438766730871">"<xliff:g id="FILE_SIZE">%1$s</xliff:g> Recebimento concluído."</string>
     <string name="upload_success" msgid="4014469387779648949">"<xliff:g id="FILE_SIZE">%1$s</xliff:g> Envio concluído."</string>
     <string name="inbound_history_title" msgid="6940914942271327563">"Transferências de entrada"</string>
     <string name="outbound_history_title" msgid="4279418703178140526">"Transferências de saída"</string>
     <string name="no_transfers" msgid="3482965619151865672">"O histórico de transferências está vazio."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Todos os itens serão excluídos da lista."</string>
-    <string name="outbound_noti_title" msgid="8051906709452260849">"Compartilhamento Bluetooth: Arquivos enviados"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Compartilhamento Bluetooth: Arquivos recebidos"</string>
+    <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth: arquivos enviados"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth: arquivos recebidos"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> com falha.</item>
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> com falha.</item>
