--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -41,7 +41,7 @@
     <string name="notification_receiving" msgid="4674648179652543984">"Pagbahagi sa Bluetooth: Tinatanggap ang <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_received" msgid="3324588019186687985">"Pagbahagi sa Bluetooth: Natanggap ang <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_received_fail" msgid="3619350997285714746">"Pagbahagi sa Bluetooth: Hindi natanggap ang file na <xliff:g id="FILE">%1$s</xliff:g>"</string>
-    <string name="notification_sending" msgid="3035748958534983833">"Pagbahagi sa Bluetooth: Ipinapadala ang <xliff:g id="FILE">%1$s</xliff:g>"</string>
+    <string name="notification_sending" msgid="3035748958534983833">"Pagbabahagi sa Bluetooth: Ipinapadala ang <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_sent" msgid="9218710861333027778">"Pagbahagi sa Bluetooth: Ipinadala ang <xliff:g id="FILE">%1$s</xliff:g>"</string>
     <string name="notification_sent_complete" msgid="302943281067557969">"100% kumpleto"</string>
     <string name="notification_sent_fail" msgid="6696082233774569445">"Pagbahagi sa Bluetooth: Hindi naipadala ang file na <xliff:g id="FILE">%1$s</xliff:g>"</string>
@@ -108,7 +108,7 @@
     <string name="no_transfers" msgid="3482965619151865672">"Walang laman ang history ng paglilipat."</string>
     <string name="transfer_clear_dlg_msg" msgid="1712376797268438075">"Iki-clear ang lahat ng mga item mula sa listahan."</string>
     <string name="outbound_noti_title" msgid="8051906709452260849">"Bluetooth share: Mga naipadalang file"</string>
-    <string name="inbound_noti_title" msgid="4143352641953027595">"Bluetooth share: Mga natanggap na file"</string>
+    <string name="inbound_noti_title" msgid="4143352641953027595">"Pagbabahagi sa Bluetooth: Mga natanggap na file"</string>
     <plurals name="noti_caption_unsuccessful" formatted="false" msgid="2020750076679526122">
       <item quantity="one"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> ang hindi matagumpay.</item>
       <item quantity="other"><xliff:g id="UNSUCCESSFUL_NUMBER_1">%1$d</xliff:g> ang hindi matagumpay.</item>
